--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -6,14 +6,17 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 18px 30px;
+  z-index: 1;
 }
 li,a,button {
    text-decoration: none;
+  
  }
 .logo {
   font-size: 30px;
   color: $textcolor;
   margin-right: auto;
+  background-color:none;
 }
 button {
   color: $textcolor;
