--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ header {
       -ms-flex-align: center;
           align-items: center;
   padding: 18px 30px;
+  z-index: 1;
 }
 
 li, a, button {
@@ -20,6 +21,7 @@ li, a, button {
   font-size: 30px;
   color: #f3f6f4;
   margin-right: auto;
+  background-color: none;
 }
 
 button {
@@ -74,7 +76,7 @@ button:hover {
 .maincontent {
   background-color: #4c4a44;
   color: #f3f6f4;
-  height: 85vh;
+  height: 100vh;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
@@ -83,6 +85,7 @@ button:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: auto;
 }
 
 @media (min-width: 0px) and (max-width: 600px) {
