--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -7,6 +7,7 @@ header {
   align-items: center;
   padding: 18px 30px;
   z-index: 1;
+  position:fixed;
 }
 li,a,button {
    text-decoration: none;
