--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -7,7 +7,10 @@ header {
   align-items: center;
   padding: 18px 30px;
   z-index: 1;
-  position:fixed;
+  position: fixed; 
+  top: 0; 
+  width: 100%;
+ 
 }
 li,a,button {
    text-decoration: none;
