--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,6 +1,6 @@
-$primary:#24252A;
-$secondary:#4c4a44;
+$primary:#6e3b3b;
+$secondary:#ac3f21;
 $textcolor:#f3f6f4;
-$texthover:#0088a9;
-$buttoncolor:rgba(0,136,169,1);
-$buttonhover:rgba(0,136,168,0.8);
+$texthover:#f3cf7a;
+$buttoncolor:#be6a15;
+$buttonhover:#ac3f21;
