--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 header {
-  background-color: #24252A;
+  background-color: #6e3b3b;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,7 +32,7 @@ button {
   font-weight: bold;
   font-size: 15px;
   cursor: pointer;
-  background-color: #0088a9;
+  background-color: #be6a15;
   border-radius: 20px;
   border: none;
   padding: 8px 20px;
@@ -51,11 +51,11 @@ button {
 }
 
 .navlinks ul li a:hover {
-  color: #0088a9;
+  color: #f3cf7a;
 }
 
 button:hover {
-  background-color: rgba(0, 136, 168, 0.8);
+  background-color: #ac3f21;
 }
 
 .navbar_icon {
@@ -77,7 +77,7 @@ button:hover {
 }
 
 .maincontent {
-  background-color: #4c4a44;
+  background-color: #ac3f21;
   color: #f3f6f4;
   height: 100vh;
   display: -ms-grid;
